# schnieder-vsd

./: Dockerfile  README.md  doover_config.json  pyproject.toml
.appgen/: PHASE.md
simulators/: app_config.json  docker-compose.yml
simulators/atv600/: Dockerfile  main.py  pyproject.toml
src/schneider_vsd/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py  modbus_client.py
src/schneider_vsd/vsd/: __init__.py  atv600.py  base.py
src/schnieder_vsd/: __init__.py  app_config.py  app_state.py  app_ui.py  application.py  modbus_client.py
tests/: test_imports.py
