[project]
name = "schneider-vsd"
version = "0.1.0"
description = "Doover app for monitoring and controlling Schneider Altivar VSDs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover==1.0.0a5",
    "pymodbus>=3.11.4",
]

[project.scripts]
doover-app-run = "schneider_vsd:main"
export-config = "schneider_vsd.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.11.18",
    "grpcio>=1.71.0",
    "protobuf>=6.30.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
